tests/ui/parser/shebang/issue-71471-ignore-tidy.stderr
error: expected `[`, found `B`
  --> $DIR/issue-71471-ignore-tidy.rs:2:3
   |
LL | #!B
   |   ^ expected `[`
   |
   = note: shebangs `#!` must be at the start of the file

error: aborting due to 1 previous error

